@@ -21,6 +21,7 @@ import java.io.File;
 import java.io.IOException;
 
 import org.apache.tools.ant.BuildFileTest;
+import org.apache.tools.ant.taskdefs.condition.Os;
 import org.apache.tools.ant.util.FileUtils;
 
 /**
@@ -29,7 +30,8 @@ import org.apache.tools.ant.util.FileUtils;
 public class ConcatFilterTest extends BuildFileTest {
 
     private static FileUtils fu = FileUtils.newFileUtils();
-    private static final String lSep = System.getProperty("line.separator");
+    private static final String lSep = 
+        Os.isFamily("mac") ? "\r" : System.getProperty("line.separator");
 
     private static final String FILE_PREPEND_WITH =
           "this-should-be-the-first-line" + lSep
